feat: security hardening and production deployment setup
Security Fixes:
- Remove hardcoded admin route, use standard /admin path
- Add admin role checks to audit log cleanup functions
- Secure first-user-becomes-admin with ALLOWED_ADMIN_EMAILS whitelist
- Remove hardcoded storage IDs from logo endpoints
- Fix Turnstile bypass vulnerability (require explicit TURNSTILE_DEV_BYPASS)
- Add admin auth checks to platformDns actions
- Add rate limiting to contact form (3 per 5 min per email)
- Improve IPv4 validation to reject invalid octets (e.g., 999.999.999.999)

Production Setup:
- Update vercel.json to use production Convex URL
- Add .env.production with production environment variables
- Update .env.local.example with comprehensive documentation

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,56 @@
-# Deployment URL from Convex Dashboard
+# ===========================================
+# LOCAL DEVELOPMENT ENVIRONMENT VARIABLES
+# ===========================================
+# Copy this file to .env.local and fill in your values
+
+# Convex Deployment URL (from Convex Dashboard)
 VITE_CONVEX_URL=https://your-deployment-name.convex.cloud
 
-# GitHub OAuth (Set these in Convex Dashboard via `npx convex env set ...`, not here for production usually, but for local dev maybe?)
-# Actually Convex Auth reads these from Backend Environment Variables.
-# So you run:
+# Cloudflare Turnstile site key (public, safe for frontend)
+VITE_TURNSTILE_SITE_KEY=your-turnstile-site-key
+
+# ===========================================
+# CONVEX BACKEND ENVIRONMENT VARIABLES
+# Set these via: npx convex env set KEY=value
+# For production add: --prod flag
+# ===========================================
+
+# GitHub OAuth
 # npx convex env set AUTH_GITHUB_ID=...
 # npx convex env set AUTH_GITHUB_SECRET=...
+
+# Cloudflare DNS
+# npx convex env set CLOUDFLARE_API_TOKEN=...
+# npx convex env set CLOUDFLARE_ZONE_ID=...
+# npx convex env set CLOUDFLARE_ACCOUNT_ID=...
+
+# Cloudflare Turnstile (CAPTCHA)
+# npx convex env set CLOUDFLARE_TURNSTILE_SECRET_KEY=...  (REQUIRED in production)
+# npx convex env set TURNSTILE_DEV_BYPASS=true            (DEV ONLY - never in production!)
+
+# Mailgun Email
+# npx convex env set MAILGUN_API_KEY=...
+# npx convex env set MAILGUN_DOMAIN=...
+# npx convex env set FROM_EMAIL=...
+
+# Site Configuration
+# npx convex env set SITE_URL=https://your-convex-deployment.convex.site
+# npx convex env set ALLOWED_ADMIN_EMAILS=admin@example.com,other@example.com
+
+# Logo Storage (optional - endpoints return 503 if not set)
+# npx convex env set LOGO_LIGHT_STORAGE_ID=...
+# npx convex env set LOGO_DARK_STORAGE_ID=...
+
+# ===========================================
+# PRODUCTION vs DEVELOPMENT
+# ===========================================
+# Development: npx convex env set KEY=value
+# Production:  npx convex env set KEY=value --prod
+#
+# CRITICAL PRODUCTION SETTINGS:
+# - ALLOWED_ADMIN_EMAILS must be set (controls who can become admin)
+# - CLOUDFLARE_TURNSTILE_SECRET_KEY must be set (CAPTCHA fails without it)
+# - Do NOT set TURNSTILE_DEV_BYPASS in production
+#
+# Admin route is /admin - access control enforced by backend
+# Do NOT use VITE_ prefix for secrets as they get bundled into client code
